# workaround-brainstormer

./: .env.example  .envtemplate  .gitignore  Dockerfile  LICENSE  LOGGING.md  QUICK_START_LOGGING.md  README  README.md  dockerignore  dvc.yaml  hasher.py  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/workflows/: build_template.yml  create_release.yml  dev_deployment.yml  release_demo_prod.yml  release_prod.yml
app/: __init__.py  auth.py  language_service.py  limiter.py  llm.py  logger_config.py  prompts.py  routes.py  translations.py  utils.py
dvclive/: metrics.json
metrics/: .gitignore  llm_metrics.csv.dvc
performance_tests/: ProcessWorkarounds.py  assess_llm_performance.py  llm_performance.json  metrics.py  performance_assessment_prompts.py  processes_descriptions.py  run_strategy_one.py  run_strategys.py  run_tests.py  test_bert_score.py  test_llm_judge_domain_relevance.py  workaround_metrics.py
pulumi/: Pulumi.main.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/container_registry/: acr.py
rag/: Literature-Review.md  README.md  populate_qdrant_db.py  workarounds_corpus.csv
static/: datenschutz.html  impressum.html  index.html  index_de.html  nutzungsbedingungen.html  search.json  styles.css
templates/: admin.html  base.html  index.html  login.html
tests/: test_prompt_metrics.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
website/: README.md  _quarto.yml  datenschutz.qmd  footer.html  impressum.qmd  index.qmd  nutzungsbedingungen.qmd  styles.css  theme.custom.scss
(+57 files in other folders)
